adding serverless api

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -19,7 +19,7 @@ provider:
 # These environment variables are made available to our functions
 # under process.env.
 environment:
-  tableName: trails
+  tableName: ${env:tab}
 
 # 'iamRoleStatements' defines the permission policy for the Lambda function.
 # In this case Lambda functions are granted with permissions to access DynamoDB.
@@ -37,7 +37,7 @@ iamRoleStatements:
 
 functions:
   # Defines an HTTP API endpoint that calls the main function in create.js
-  # - path: url path is /notes
+  # - path: url path is /trails
   # - method: POST request
   # - cors: enabled CORS (Cross-Origin Resource Sharing) for browser cross
   #     domain api call
@@ -50,3 +50,52 @@ functions:
           method: post
           cors: true
           authorizer: aws_iam
+  get:
+    # Defines an HTTP API endpoint that calls the main function in get.js
+    # - path: url path is /trails/{id}
+    # - method: GET request
+    handler: get.main
+    events:
+      - http:
+          path: trails/{id}
+          method: get
+          cors: true
+          authorizer: aws_iam
+  list:
+    # Defines an HTTP API endpoint that calls the main function in get.js
+    # - path: url path is /trails/{id}
+    # - method: GET request
+    handler: list.main
+    events:
+      - http:
+          path: trails/{id}
+          method: get
+          cors: true
+          authorizer: aws_iam
+  update:
+    # Defines an HTTP API endpoint that calls the main function in update.js
+    # - path: url path is /notes/{id}
+    # - method: PUT request
+    handler: update.main
+    events:
+      - http:
+          path: trails/{id}
+          method: put
+          cors: true
+          authorizer: aws_iam
+  delete:
+    # Defines an HTTP API endpoint that calls the main function in delete.js
+    # - path: url path is /notes/{id}
+    # - method: DELETE request
+    handler: delete.main
+    events:
+      - http:
+          path: trails/{id}
+          method: delete
+          cors: true
+          authorizer: aws_iam
+          
+# Create our resources with separate CloudFormation templates
+resources:
+  # API Gateway Errors
+  - ${file(resources/api-gateway-errors.yml)}
