--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -19,7 +19,7 @@ provider:
 # These environment variables are made available to our functions
 # under process.env.
 environment:
-  tableName: ${env:tab}
+  tableName: ${env:table}
 
 # 'iamRoleStatements' defines the permission policy for the Lambda function.
 # In this case Lambda functions are granted with permissions to access DynamoDB.
