adding trails list, fix api path error

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -68,7 +68,7 @@ functions:
     handler: list.main
     events:
       - http:
-          path: trails/{id}
+          path: trails
           method: get
           cors: true
           authorizer: aws_iam
